<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/hue_icon"
        android:layout_marginStart="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/room_clicked_lamp_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:text="@string/lamp_name"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="39dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <Switch
        android:id="@+id/room_clicked_lampSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        android:layout_marginEnd="22dp"
        android:layout_alignBaseline="@+id/room_clicked_lamp_name"
        android:layout_alignBottom="@+id/room_clicked_lamp_name"
        android:layout_alignParentEnd="true"
        android:focusable="false"
        android:focusableInTouchMode="false"/>


    <TextView
        android:id="@+id/lamp_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:text="@string/lamp_status_label"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginStart="28dp" />

    <TextView
        android:id="@+id/room_clicked_lamp_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:text="@string/lamp_status_connected"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/lamp_status_label"
        app:layout_constraintLeft_toRightOf="@+id/lamp_status_label"
        app:layout_constraintTop_toTopOf="@+id/lamp_status_label"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_alignBaseline="@+id/lamp_status_label"
        android:layout_alignBottom="@+id/lamp_status_label"
        android:layout_toEndOf="@+id/lamp_status_label"
        android:layout_marginStart="17dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/room_clicked_lamp_name"
        android:layout_below="@+id/lamp_status_label"
        android:layout_marginTop="11dp" />

</RelativeLayout>